# ChangeLog of Nadoka($Rev$)
# $Id$ 

2009-08-18  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadoka.rb, ndk/config.rb, rice/irc.rb: ruby 1.9 support (not
	completed yet). apply patch from unak.

2009-08-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadokarc, ndk/config.rb, ndk/server.rb: no listen when
	Client_server_port is nil.

2009-08-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/tenkibot.nb: omit empty min celsius.

2009-07-29  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/rss_check.rb: update lirs_uri.

2009-07-29  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* 0.7.1 : released

	* ndk/version.rb : 0.7.2

2009-07-27  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadoka.rb: add --daemon option. (apply patch from unak)

2009-07-04  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/dictbot.nb: avoid nkf bug.
	add waei as w, ruigo as r.
	new yahoo dict URI. (apply patch from ko1_ndk)

	* plugins/googlebot.nb: quote splited words. (apply patch from ko1_ndk)

2009-07-01  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* rice/irc.rb: @conn[0] may be nil.

2009-05-25  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/config.rb, ndk/server.rb: add Primitive_Filter
	  to filter any commands. (apply patch from unak)

2009-05-20  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/identifynickserv.nb: added.

2009-05-20  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/bot.rb, ndk/server.rb: add on_server_connected.

2009-04-16  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadokarc, ndk/config.rb, ndk/server.rb, rice/irc.rb: support SSL.

Wed Mar 19 19:46:52 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/logger.rb : pass ch to msgobj from clog.

	* ndk/config.rb : unify safe channel log filename.

Mon Jul 23 01:07:08 2007  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* lib/rss_check.rb : bug fix when dc_date is nil.

	* ndk/config.rb : fix bug when non-Hash in BotConfig array.


Mon Jul 02 19:01:04 2007  Koichi Sasada  <ko1@atdot.net>
