@@ -1,6 +1,10 @@
 # ChangeLog of Nadoka($Rev$)
 # $Id$ 
 
+2009-08-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* nadoka.rb, ndk/server.rb: handle ctcp on ruby 1.9.
+
 2009-08-18  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* nadoka.rb, ndk/config.rb, rice/irc.rb: ruby 1.9 support (not
